--- a/style.css
+++ b/style.css
@@ -1,7 +1,65 @@
-h1 {
-    text-align: center;
+body {
+  background-color: #f9f7fe;
+  font-family: "PT Mono", monospace;
 }
 
-footer{
-    text-align: center;
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 18px;
+}
+
+h1 {
+  text-align: center;
+  font-family: "PT Mono", monospace;
+  font-size: 36px;
+}
+
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: white;
+  padding: 30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
+}
+
+.city {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  padding: 30px;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 28px;
+  vertical-align: middle;
+  line-height: 48px;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+footer {
+  text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.6);
 }
