--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h2 {
 }
 
 .time {
-  font-size: 48px;
+  font-size: 36px;
   font-weight: bold;
 }
 
@@ -56,6 +56,7 @@ h2 {
 
 .date {
   opacity: 0.7;
+  font-size:small;
 }
 
 footer {
